kubernetes/llm/llama-cpp-igpu/overlays/workload-prd/gpu-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-cpp-igpu
  namespace: llm
spec:
  strategy:
    type: Recreate
  template:
    spec:
      tolerations:
        - key: workload
          operator: Equal
          value: gpu
          effect: NoSchedule
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      resourceClaims:
        - name: gpu
          resourceClaimTemplateName: llama-cpp-igpu-radeon780m
      containers:
        - name: llama-cpp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            claims:
              - name: gpu
