kubernetes/llm/llama-cpp-igpu/overlays/workload-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-igpu
  namespace: llm
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-vulkan-igpu
  hostnames:
    - "vulkan-igpu.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: llama-cpp-igpu
          port: 8080
